--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webpack-exercicios",
   "version": "1.0.0",
+  "private": "false",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
